# QT_Calculator

./: CMakeLists.txt  calculator.cpp  calculator.h  converter.cpp  converter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
